--- a/css/styles.css
+++ b/css/styles.css
@@ -292,12 +292,13 @@ margin-right: auto;
       line-height: 1.5;
        color: #2e2f42;
       letter-spacing: 0.02em;
-      text-decoration: none;
-      list-style: none;
-      text-align: left;
-      background-color: #2e2f42;
-      text-align: center;
+       background-color: #2e2f42;
       padding: 188px 0 ;
+      background-image: linear-gradient(rgba(46, 47, 66, 0.7), rgba(46, 47, 66, 0.7)), url(../images/img-name.jpeg);
+      max-width: 1440px;
+      background-repeat: no-repeat;
+      background-position: center;
+      background-size: cover;
     }
     
   /* main section */
