--- a/css/styles.css
+++ b/css/styles.css
@@ -218,6 +218,17 @@ margin-right: auto;
    color: #434455;
    letter-spacing: 0.02em;
  }
+.second-sctn-icn
+{
+display: flex;
+  align-items: center;
+  justify-content: center;
+  height: 112px;
+  background-color: #f4f4fd;
+  border-radius: 4px;
+  margin-bottom: 8px;
+}
+
 
  
 
