--- a/css/styles.css
+++ b/css/styles.css
@@ -131,6 +131,7 @@ color: #404bbf;
       display: flex;
       gap: 40px;
     }
+
     .contact-menu
     {
       display: flex;
@@ -167,14 +168,6 @@ address
   margin-left: auto;
 }
 /* first section */
-second-menu-title
-{
- background-image: linear-gradient(rgba(46, 47, 66, 0.7), rgba(46, 47, 66, 0.7));
- max-width: 1440px;
- background-repeat: no-repeat;
- background-position: center;
- background-size: cover;
-}
 /* main */
   .order-button{
     font-family:"Roboto",
@@ -194,6 +187,7 @@ background-color: #4d5ae5;
 border-radius: 4px;
 margin-left: auto;
 margin-right: auto;
+margin-top: 48px;
  }
   .order-button:hover{
     background-color: #404bbf;
@@ -237,9 +231,6 @@ display: flex;
    letter-spacing: 0.02;
    line-height: 1.2;
    font-weight: 500;
-   text-decoration: none;
-   list-style: none;
-   text-transform: capitalize;
  }
 
  .contact-menu {
@@ -248,6 +239,7 @@ display: flex;
  
 
   /* our team */
+
   .team-list {
        list-style: none;
      }
@@ -257,7 +249,43 @@ display: flex;
        line-height: 1.5;
        letter-spacing: 0.02em;
        color: #434455;
+       margin-bottom: 8px;
      }
+     .social-item {
+       width: 40px;
+       height: 40px;
+     }
+     .social-list
+      {
+        display: flex;
+        gap: 24px;
+        margin: auto;
+      }
+      .title-footer
+      {
+      font-style: normal;
+        font-weight: 500;
+        font-size: 16px;
+        line-height: 24px;
+        color:#FFFFFF;
+        text-transform: capitalize;
+        text-align: center;
+        margin-bottom: 8px;
+      }
+      .social-link
+      {
+        display: flex;
+        align-items: center;
+        justify-content: center;
+        width: 100%;
+        height: 100%;
+        border-radius: 50%;
+        background-color:#4D5AE5;
+      }
+      .social-link:hover,.social-link:focus
+      {
+        background-color: #404bbf;
+      }
   
      .name {
        font-size: 20px;
@@ -310,6 +338,8 @@ display: flex;
       background-repeat: no-repeat;
       background-position: center;
       background-size: cover;
+      margin-left: auto;
+      margin-right: auto;
     }
     
   /* main section */
@@ -408,37 +438,19 @@ color: #F4F4FD;
         line-height: 1.11;
         letter-spacing: 0.02em;
         color:#2e2f42;
-        text-transform: capitalize;
         text-align: center;
       }
-    .team-menu {
-      font-size: 36px;
-      line-height: 1.11;
-      letter-spacing: 0.02em;
-      color:#2e2f42;
-      text-transform: capitalize;
-      margin-bottom: 72px;
-       }
 
     .team-menu-item {
     background-color:#FFFFFF;
       width:calc((100%-72px)/4);
       border-radius: 0px 0px 4px 4px;
+      box-shadow: 0px 1px 6px rgba(46, 47, 66, 0.08), 0px 1px 1px rgba(46, 47, 66, 0.16), 0px 2px 1px rgba(46, 47, 66, 0.08);
     }
       .employee {
        padding: 32px 16px;
       }
     /* third section */
-    .title-third-section
-    {
-      font-size: 36px;
-      line-height: 1.11;
-      letter-spacing: 0.02em;
-      color:#2e2f42;
-      text-align: center;
-      text-transform: capitalize;
-      margin-bottom: 72px;
-    }
     .offers-menu-section
     {
       padding-bottom: 120px;
@@ -579,6 +591,55 @@ background-color:#F4F4FD ;
   line-height: 1.5;
   letter-spacing: 0.02em;
   color: #434455;
+
+}
+/* customers*/
+.customers-icon
+{
+  fill:#8E8F99; 
+}
+
+.customers-list
+{
+  display: flex;
+  gap: 24px;
+}
+.customers-list-item
+{
+  width: calc((100% - 120px) / 6);
+  height: 88px;
+}
+.customers-link:hover,.customers-link:focus
+{
+  border-color: #404BBF;
+}
+.customers-link:hover .customers-icon ,.customers-link:focus .customers-icon
+{
+  fill: #404BBF;
+}
+.customers-link
+{
+  display: flex;
+  align-items: center;
+  justify-content: center;
+  height: 100%;
+  width: 100%;
+  border: 1px solid #8E8F99;
+  border-radius: 4px;
+}
+.customers
+{
+  padding: 120px 0;
+}
+.main-title
+{
+  font-size: 36px;
+  line-height: 1.11;
+  letter-spacing: 0.02em;
+  color: #2e2f42;
+  text-transform: capitalize;
+  margin-bottom: 72px;
+  text-align:center ;
 }
 /* footer */
 .bottom-logo
