--- a/css/styles.css
+++ b/css/styles.css
@@ -263,14 +263,15 @@ display: flex;
       }
       .title-footer
       {
-      font-style: normal;
         font-weight: 500;
         font-size: 16px;
         line-height: 24px;
         color:#FFFFFF;
-        text-transform: capitalize;
-        text-align: center;
         margin-bottom: 8px;
+      }
+            .footer-social-list
+      {
+            gap:16px
       }
       .social-link
       {
@@ -356,6 +357,14 @@ display: flex;
 /* bottom logo */
    
 /* WEB */
+.footer-box
+{
+  display: flex;
+  gap: 120px;
+}
+
+
+
  
     logo {
       font-family: "Raleway", sans-serif;
