--- a/css/styles.css
+++ b/css/styles.css
@@ -260,6 +260,7 @@ display: flex;
         display: flex;
         gap: 24px;
         margin: auto;
+        justify-content: center;
       }
       .title-footer
       {
