--- a/css/styles.css
+++ b/css/styles.css
@@ -262,6 +262,10 @@ display: flex;
         margin: auto;
         justify-content: center;
       }
+      .social-icon
+      {
+        fill: #f4f4fd;
+      }
       .title-footer
       {
         font-weight: 500;
