--- a/css/styles.css
+++ b/css/styles.css
@@ -185,6 +185,7 @@ address {
   margin-left: auto;
   margin-right: auto;
   margin-top: 48px;
+  padding: 16px 32px;
 }
 .order-button:hover {
   background-color: #404bbf;
