--- a/css/styles.css
+++ b/css/styles.css
@@ -441,7 +441,7 @@ button:focus {
 }
 
 .team-menu-item {
-  background-color: #ffffff;
+  background-color: #e7e9fc;
   width: calc((100%-72px) / 4);
   border-radius: 0px 0px 4px 4px;
   box-shadow: 0px 1px 6px rgba(46, 47, 66, 0.08),
