--- a/css/styles.css
+++ b/css/styles.css
@@ -325,13 +325,13 @@ address {
   line-height: 1.5;
   color: #2e2f42;
   letter-spacing: 0.02em;
-  background-color: #2e2f42;
+
   padding: 188px 0;
   background-image: linear-gradient(
       rgba(46, 47, 66, 0.7),
       rgba(46, 47, 66, 0.7)
     ),
-    url(./images/people-office.jpg);
+    url(../images/people-office.jpg);
   max-width: 1440px;
   background-repeat: no-repeat;
   background-position: center;
